4.6.2
=====
- Avoid causing xfce4-session to time out on startup (bug #5040).
- Fix type in xfconf property name (debian bug #527238).
- Fix mnemonic widgets in accessibility dialog (bug #5550).

4.6.1
=====
- Use the folder name for selecting the icon- and style-theme in the
  appearance dialog (bug #4997).
- Make sure inputproto 1.4.2 is available before enabling device
  hotplugging in the code (bug #5084).
- Remove unsigned clamp macro that broke applying the display settings
  and select the correct refresh rate (bug #4966).
- Make sure that the same .desktop file does not appear in the settings
  manager more then once if it occurs in different locations in XDG_DATA_DIRS
  (bug #5159).

4.6.0
=====
- Make the Xrandr dependency optional. If Xrandr is disabled, the
  display plugin won't be compiled at all (bug #4836).
- When stealing a shortcut from another shortcuts provider, clear the 
  shortcut of that provider first.
- Make embedded settings dialogs optional (and disabled by default). 
  They can be turned on using --enable-pluggable-dialogs.
- Don't mark GTK+ stock labels as translatable
- Fix DPI calculation when DPI settings are set to '-1', (eg default) since we 
  can not depend on pango, cairo or fontconfig to do the right thing.
- Fix typing error in the ToolbarStyle default XSETTINGS registry value
- Do not fill the xsettings channel from the settings-dialog, xfsettingsd takes
  care of this.
- Add Gtk/IMModule XSETTINGS key (Bug #4961)

4.5.99.1 (Xfce 4.6rc1)
======================
- Properly handle missing RandR extension in xfce4-settings-helper
  and xfce4-display-settings (bug #4836).
- Fix possible segfault in xfce4-settings-helper (bug #4813).
- Fix xfsettingsd segfault due to strings defaulting to NULL. Patch
  by Lars-Peter Clausen (bug #4797).
- Translation updates: Brazilian Portuguese, Catalan, Czech, Danish, 
  Finnish, French, Japanese, Simplified Chinese, Spanish and Swedish.

4.5.93 (Xfce 4.6 beta3)
=======================