@@ -3,6 +3,7 @@
 - Avoid causing xfce4-session to time out on startup (bug #5040).
 - Fix type in xfconf property name (debian bug #527238).
 - Fix mnemonic widgets in accessibility dialog (bug #5550).
+- Fix translation macros in settings helper (bug #5554).
 
 4.6.1
 =====
